--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.25.0",
     "center-align": "^1.0.1",
     "chalk": "^5.0.0",
+    "cli-clear": "^1.0.4",
     "figlet": "^1.5.2",
     "he": "^1.2.0",
     "inquirer": "^8.2.0"
